...
            android:gravity="center"
            android:text="添加事项"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_option"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:textColor="@color/black"
...
                android:gravity="center|end"
                android:text="事项说明"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/et_des_list"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/editext"
                android:gravity="start|top"
                android:hint="请填写待做事项"
...
