...
<!--        android:src="@drawable/img_jiyu02"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"/>-->

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:gravity="center"
        android:text="欢迎来到 积语——云伴学 ！"
        android:textColor="@color/black"
        android:textSize="20sp"
...
