<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rg_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_login"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="17sp"
            android:text="登录"/>
        <RadioButton
            android:id="@+id/rb_register"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="17sp"
            android:text="注册"
            android:checked="true"/>
    </RadioGroup>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/img_jiyu"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="欢迎使用 积语——云伴学 ！"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="17sp"
            android:text="用户名: "
            android:layout_marginTop="5dp" />
        <EditText
            android:id="@+id/et_username"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittext_border"
            android:inputType="text"
            android:maxLength="11"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:hint="请输入用户名"
            android:textSize="17sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="17sp"
            android:text="水平: "
            android:layout_marginTop="5dp"
            android:layout_marginLeft="18dp"/>
        <EditText
            android:id="@+id/et_level"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittext_border"
            android:inputType="text"
            android:maxLength="11"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:hint="请输入您的高数水平(分别有1,2,3等级)"
            android:textSize="17sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="17sp"
            android:text="账号: "
            android:layout_marginTop="5dp"
            android:layout_marginLeft="18dp"/>
        <EditText
            android:id="@+id/et_account"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittext_border"
            android:inputType="text"
            android:maxLength="11"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:hint="请输入账号"
            android:textSize="17sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="17sp"
            android:text="密码: "
            android:layout_marginTop="5dp"
            android:layout_marginLeft="18dp"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittext_border"
            android:inputType="textPassword"
            android:maxLength="11"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:hint="请输入密码"
            android:textSize="17sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="17sp"
            android:text="确认: "
            android:layout_marginTop="5dp"
            android:layout_marginLeft="18dp"/>
        <EditText
            android:id="@+id/et_password_confirm"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittext_border"
            android:inputType="textPassword"
            android:maxLength="11"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:hint="再次输入密码"
            android:textSize="17sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/btn_register"
            android:layout_width="400dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="注册"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>